<resources>
    <string name="app_name" translatable="false">Khemar</string>
    <string name="welcome">Welcome to Krusty Krab Pizza!</string>
    <string name="order">Place Order</string>
    <string name="menu">Menu</string>
    <string name="trackit">Track Order</string>
    <string name="help">Help</string>
    <string name="myname" translatable="false">Khemar</string>
    <string name="pizza">Pizza</string>
    <string name="makeit">Make Your Own Pizza</string>
    <string name="deals">Choose from Menu</string>
    <string name="Sides">Sides</string>
    <string name="slogan" translatable="false">Its the pizza for you and me!</string>
    <string name="unavailable">This functionality is not available yet!! :( </string>
    <string name="proceed">Proceed to Checkout </string>
    <string name="details">Enter Information</string>
    <string name="checkout">CHECKOUT</string>
    <string name="thankyou">Order placed. Thank you for ordering with us!</string>
    <string name="sizes">Choose a size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="xlarge">Xtra Large</string>
    <string name="cheese">Cheeses</string>
    <string name="goatch">Goat Cheese</string>
    <string name="fetach">Feta Cheese</string>
    <string name="mozzarella">Mozzarella</string>
    <string name="Cheddar">Cheddar Cheese</string>
    <string name="parmesan">Parmesan</string>
    <string name="meat">Meat Toppings</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="beef">Ground Beef</string>
    <string name="sausage">Spicy Sausage</string>
    <string name="ham">Ham</string>
    <string name="bacon">Bacon</string>
    <string name="chicken">Grilled Chicken</string>
    <string name="veggie">Veggie Toppings</string>
    <string name="pineapple">Pineapple</string>
    <string name="mushroom">Mushroom</string>
    <string name="spinach">Spinach</string>
    <string name="broccoli">Broccoli</string>
    <string name="greenpepper">Green Pepper</string>
    <string name="olives">Olives</string>
    <string name="garlic">Garlic</string>
    <string name="enterinfo">Enter Information:</string>
    <string name="nameinfo">Name:</string>
    <string name="emailinfo">Email Address</string>
    <string name="phoneinfo">Phone Number</string>
    <string name="addressinfo">StreetAddress</string>
    <string name="cityinfo">City</string>
    <string name="provinceinfo">Province</string>
    <string name="postalinfo">Postal Code</string>
    <string name="creditcard">Credit Card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specials">specials</string>
    <string name="confirm">Confirm</string>
    <string name="meatlovers">Meat Lovers</string>
    <string name="hawaiin">Hawaiian</string>
    <string name="veg">Veggie</string>

</resources>
