<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_make_pizza"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/white"    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/sizes"
            android:text="@string/sizes"
            android:textStyle="normal|bold"
            android:fontFamily="casual"
            android:textSize="16sp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sizeGroup">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/small"
                android:id="@+id/small" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/medium"
                android:text="@string/medium" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/large"
                android:text="@string/large" />

            <RadioButton
                android:text="@string/xlarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/xlarge" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cheese"
            android:id="@+id/cheeses"
            android:fontFamily="casual"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimary" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cheeseGroup">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mozzarella"
                android:text="@string/mozzarella" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goatch"
                android:id="@+id/goat" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fetach"
                android:id="@+id/feta" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cheddar"
                android:id="@+id/cheddar" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parmesan"
                android:id="@+id/parmesan" />
        </RadioGroup>

        <TextView
            android:text="@string/meat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/meat"
            android:fontFamily="casual"
            android:textStyle="normal|bold"
            android:textSize="16sp" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ham"
            android:id="@+id/ham" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bacon"
            android:id="@+id/bacon" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sausage"
            android:id="@+id/sausage" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beef"
            android:id="@+id/beef" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chicken"
            android:id="@+id/chicken" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pepperoni"
            android:text="@string/pepperoni" />

        <TextView
            android:text="@string/veggie"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:fontFamily="casual"
            android:textStyle="normal|bold"
            android:textSize="16sp"
            android:typeface="normal" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pineapple"
            android:id="@+id/pineapple" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinach"
            android:id="@+id/spinach" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/broccoli"
            android:id="@+id/broccoli" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mushroom"
            android:id="@+id/mushroom" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garlic"
            android:id="@+id/garlic" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greenpepper"
            android:id="@+id/greenpepper" />

            <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olives"
            android:id="@+id/olives" />


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="170dp"
            android:background="@drawable/krabs"
            android:id="@+id/continuebutton"
            android:elevation="17dp"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="127dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_height="130dp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
